<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">E.L.A.</string>

    <!-- Descrição de conteúdo -->
    <string name="desc_perfil">Ver perfil</string>
    <string name="desc_logo">Logotipo do aplicativo</string>

    <!-- Títulos -->
    <string name="titulo_historico">Histórico de chamados</string>

    <!-- Estados -->
    <string name="sem_chamado">Não há chamados ativos.</string>
    <string name="chamado_ativo">Chamado ativo em andamento</string>
    <string name="pergunta_confirmacao">Você chamou a E.L.A. Posso confirmar ou foi um acidente?</string>
    <string name="pergunta_finalizacao">Seu chamado foi encerrado. Esse chamado foi acidental ou intencional?</string>

    <!-- Botões internos -->
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_acidental">Acidental</string>
    <string name="btn_intencional">Intencional</string>
    <string name="btn_voltar_historico">Voltar</string>

    <!-- Ações secundárias -->
    <string name="btn_historico">Ver histórico de chamados</string>
    <string name="btn_contatos_seguranca">Contatos de segurança</string>
    <string name="btn_testar_notificacao">Testar Notificação</string>

    <string name="desc_foto_contato">Foto do contato</string>
    <string name="editar_contato">Editar contato</string>
    <string name="excluir_contato">Excluir contato</string>
    <string name="btn_adicionar_contato_seguranca">Adicionar contato de segurança</string>

    <string name="titulo_perfil">Meu Perfil</string>
    <string name="desc_foto_perfil">Foto de perfil</string>
    <string name="editar_perfil">Editar Perfil</string>


</resources>
